# Live2D_ForC-Qt-OpenGL-_CMake

./: CMakeLists.txt  GLCore.cpp  GLCore.h  README.md  main.cpp
LAppLive2D/Inc/: LAppLive2DManager.hpp
LAppLive2D/Src/: LAppDefine.cpp  LAppLive2DManager.cpp  LAppModel.cpp  LAppView.cpp
Resources/Maou/: 02.cdi3.json  02.prprl2d.json  Scene1.motion3.json  Scene2.motion3.json  cc_02.cfg  haixiu.exp3.json  hei.exp3.json  xing.exp3.json
